fix spacing icon woostify notices

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -376,12 +376,6 @@ $size: 40px;
 	}
 }
 
-.woocommerce-message {
-	&:before {
-	    top: 1.5em;
-	}
-}
-
 .woocommerce-error {
 	&:before {
 		content: "\e720";
